# CPSP-Dataset

./: DAVIS346.STEP  README.md  Read AEDAT.py  ZEDM.step  colcon.bash  my_CameraMount_final.step  my_CameraMount_final.stl  node_saver.run  node_zed.run  zed_camera.yaml
camera_mount_CAD/: DAVIS346.STEP  README.md
sync_saver/: CMakeLists.txt  package.xml
sync_saver/config/: camDavis.yaml  camL.ini  camL.yaml  camR.ini  camR.yaml  camZedL.yaml  event.yaml  imu.ini  imu.yaml  imuDavis.yaml
sync_saver/include/sync_saver/: config_parser.h  config_parser.hpp
sync_saver/src/: config_parser.cpp  sync_saver.cpp
